# SurveySim

./: #run.py#  .#run.py  .gitignore  Makefile  Makefile.am  Makefile.in  README.md  README_AUTOCONF  SurveySim.py  SurveySim.py~  config.status  configure  configure.ac  fluxes.txt  model.fits  new.cpp  run.py  run.py~  run.sh  tmp  update.sh  update_makefiles.sh  update_mfile.py
Source/src/: Makefile  Makefile.am  Makefile.in  cosmo.cpp  cosmo.h  filters.cpp  filters.h  fitter  functions.cpp  functions.h  lumfunct.cpp  main.cpp  mc_util.cpp  mc_util.h  obs_lib.cpp  obs_lib.h  sed_lib.cpp  sed_lib.h  simulator.cpp  simulator.h  test_filt.cpp
Source/src/.deps/: cosmo.Po  filters.Po  functions.Po  hist_lib.Po  lumfunct.Po  main.Po  mc_util.Po  obs_lib.Po  sed_lib.Po  simulator.Po
examples/: Makefile  Makefile.am  Makefile.in  PL_mips_model.fits  PL_spire_model.fits  images.py  plot_joint_contours.py  plot_nice_images.py  quick_look.py  run_Kurinsky2016_models.py  run_Kurinsky2016_spire_models.sh  save_standard_output.py
examples/plotting/: joint_contours_final_anna.py  joint_contours_paper_plot.py
examples/scripts/: Makefile  Makefile.am  Makefile.in  getBestfit.py  save_output.py
examples/spire/: Makefile  Makefile.am  Makefile.in  images.py  mips_default_model.fits  plot_joint_contours_spire-mips.py  run_Kurinsky2016_models.sh
src/: MS_spire_model.fits  Makefile  Makefile.am  Makefile.in  SurveySim  SurveySim.h  agn_frac.cpp  agn_frac.h  cosmo.h  filters.cpp  filters.h  fracs.cpp  fracs.h  functions.cpp  functions.h  getam.sh  hist_lib.cpp  hist_lib.h  lumfunct.cpp  lumfunct.h  main.cpp  mainOld.cpp  mc_util.cpp  mc_util.h  numberCounts.cpp  obs_lib.cpp  obs_lib.h  sed_lib.cpp  sed_lib.h  simulator.cpp  simulator.h  simulator_utils.cpp  surveySim.cpp
src/.deps/: SurveySim.Po  agn_frac.Po  cosmo.Po  filters.Po  fracs.Po  functions.Po  hist_lib.Po  lumfunct.Po  main.Po  mc_util.Po  numberCounts.Po  obs_lib.Po  sed_lib.Po  simulator.Po  simulator_utils.Po
src/.ipynb_checkpoints/: Completeness Fits-checkpoint.ipynb
src/alg_lib/: Makefile  Makefile.am  Makefile.in
src/alg_lib/.deps/: alglibinternal.Po  alglibmisc.Po  ap.Po  dataanalysis.Po  integration.Po  interpolation.Po  linalg.Po  optimization.Po  solvers.Po  specialfunctions.Po  statistics.Po
trunk/: .README.swp  DATA  LICENSE  Makefile.am  Makefile.in  Makefile~  README  README_AUTOCONF  aclocal.m4  configure  configure.ac  configure_all.sh  configure_original  idldir.tar  model.fits  update_makefiles.sh
trunk/autom4te.cache/: output.0  output.1  output.2  output.7  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7
trunk/doc/: README
trunk/examples/: Makefile.am  Makefile.in  add_filters_AzTEC.py  plot_images.py  run_analysis.py  save_output.py  view_filters.py
trunk/examples/plotting/: joint_contours_final.py  joint_contours_final_new.py  joint_contours_runs.py
trunk/examples/scripts/: getBestfit.py
trunk/examples/spire/: Makefile.am  Makefile.in  run_spire_models.sh
trunk/filters/: .FILTER_LIST.swp  FILTER_LIST  FILTER_LIST~  Makefile.in  filterlib.txt  tmp
trunk/idl/: Makefile.am  Makefile.in  SurveySim.pro  SurveySim.pro~  SurveySimParams.save  SurveySim_event.pro  SurveySim_info.txt  compute_counts.pro  load_parameters.pro  model.fits  plot_chisq_hist.pro  plot_chisq_trend.pro  plot_clements_counts.pro  plot_counts.pro  plot_fit_results.pro  plot_redshift.pro  settings.pro  simulation_diagnostics_event.pro
trunk/lib_aux/: Makefile.am  Makefile.in
trunk/lib_aux/CCfits/: AsciiTable.cxx  AsciiTable.lo  BinTable.cxx  BinTable.lo  CCfits.pc  CCfits.pc.in  CHANGES  Column.cxx  Column.lo  ColumnCreator.cxx  ColumnCreator.lo  ColumnData.cxx  ColumnData.lo  ColumnVectorData.lo  Doxyfile.in  ExtHDU.cxx  ExtHDU.lo  FITS.cxx  FITS.lo  FITSBase.cxx  FITSBase.lo  FITSUtil.cxx  FITSUtil.lo  FitsError.lo  HDU.cxx  HDU.lo  HDUCreator.cxx  HDUCreator.lo  KeyData.lo  Keyword.cxx  Keyword.lo  KeywordCreator.cxx  KeywordCreator.lo  Makefile  Makefile.am  Makefile.in  PHDU.lo  Table.cxx  (+12 more)
trunk/model/: AzTEC_LHE_A_model.fits  Makefile  Makefile.am  Makefile.in  Makefile~  default_model.fits  model.fits  test_model  test_model.cpp  test_model.cpp~  update_makefile.sh
trunk/obs/: AzTEC_LHE.fits  AzTEC_UDS.fits  LHE_complete.fits  LHE_complete_B.fits  LHE_complete_c.fits  Makefile.am  Makefile.in  UDS_complete.fits  UDS_complete_B.fits  aztec.fits  obs_stat.py  test.tgz  tmp.fits  update_makefile.sh  update_wise.pro  update_wise.pro~  wise.fits  wise_selected.fits
trunk/output/: Plot Output.ipynb  output.fits
trunk/python/: AzTEC_LHE_A_model.fits  DEBUG_filters.py  DEBUG_filters.py~  LHE_B_model.fits  LHE_B_model.fits~HEAD  LHE_TESTd_model.fits  Makefile  Makefile.am  Makefile.in  ModelFile.py  ObsFile.py  OutputFile.py  README  SurveySim.py  SurveySimFilters  SurveySimGUI  SurveySimGUI.py  SurveySimObsFile  SurveySim_v2.py  ad_filters.py~  counts.py  filters.py  make_template_file.py  model.fits  plot_filters.py  run_analysis.py  run_analysis_ALMA.py  run_analysis_ALMA.py~  run_analysis_AzTEC.py  run_analysis_AzTEC.py~  run_analysis_UDS.py  run_analysis_UDS.py~  setup.py  show_output.py  spire_model.fits  view_filters.py  view_modelfile.py
trunk/src/: Makefile.am  Makefile.in  Makefile~  agn_frac.cpp  agn_frac.cpp~  agn_frac.h  agn_frac.h~  agn_frac_old.cpp  constants.h  cosmo.cpp  filters.cpp  filters.h  fitter  functions.cpp  functions.h  hist_lib.cpp  hist_lib.h  lumfunct.cpp  lumfunct.h  main.cpp  mc_util.cpp  mc_util.h  numberCounts.cpp  numberCounts.h  obs_lib.cpp  obs_lib.h  sed_lib.cpp  sed_lib.h  sed_lib2.cpp  simulator.cpp  simulator.h  simulator_utils.cpp  simulator_utils.h
trunk/templates/: Comprehensive_AGN4.txt  Comprehensive_Composite3.txt  Comprehensive_SFG2.txt  Kirkpatrick2015_templates.fits  Makefile.am  Makefile.in  Plot Templates.ipynb  Plot_Templates.ipynb  comprehensive_templates.tar  default_templates.fits  make_template_file.pro  make_template_file.pro~  make_template_file.py  make_template_file.py~  my_templates.fits  update_makefile.sh
(+1495 files in other folders)
