AUTOMAKE_OPTIONS=foreign

exampledir = $(prefix)/@PACKAGE@/examples
dist_example_DATA = L2-COSMOS_xID24_DR3.fits L2-COSMOS_xID250_DR2.fits mips_default_model.fits plot_joint_contours.py plot_nice_images.py plot_standard_images.py print_fitResults.py run_Kurinsky2016_mips_models.sh run_Kurinsky2016_spire_models.sh save_standard_output.py spire_default_model.fits
