AUTOMAKE_OPTION=foreign
AM_CXXFLAGS=-Wall -I/usr/local/include -I./ -std=c++11

noinst_LIBRARIES = libalglib.a
libalglib_a_SOURCES = alglibinternal.h alglibmisc.h ap.h dataanalysis.h integration.h interpolation.h linalg.h optimization.h solvers.h specialfunctions.h statistics.h stdafx.h alglibinternal.cpp alglibmisc.cpp ap.cpp dataanalysis.cpp integration.cpp interpolation.cpp linalg.cpp optimization.cpp solvers.cpp specialfunctions.cpp statistics.cpp
